--- a/manual-install/ios-themes.yaml
+++ b/manual-install/ios-themes.yaml
@@ -32,7 +32,7 @@ ios-light-mode-dark-green-alternative:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: "#333333"  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -107,7 +107,7 @@ ios-light-mode-dark-green:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: rgba(255, 214, 10, 1)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -332,7 +332,7 @@ ios-light-mode-light-blue-alternative:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: "#333333"  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -407,7 +407,7 @@ ios-light-mode-light-blue:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: rgba(255, 214, 10, 1)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -632,7 +632,7 @@ ios-light-mode-light-green-alternative:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: "#333333"  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -707,7 +707,7 @@ ios-light-mode-light-green:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: rgba(255, 214, 10, 1)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -932,7 +932,7 @@ ios-light-mode-orange-alternative:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: "#333333"  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -1007,7 +1007,7 @@ ios-light-mode-orange:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: rgba(255, 214, 10, 1)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -1232,7 +1232,7 @@ ios-light-mode-blue-red-alternative:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: "#333333"  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -1307,7 +1307,7 @@ ios-light-mode-blue-red:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: rgba(255, 214, 10, 1)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -1532,7 +1532,7 @@ ios-light-mode-red-alternative:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: "#333333"  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -1607,7 +1607,7 @@ ios-light-mode-red:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: rgba(255, 214, 10, 1)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#007aff"  # from Apple systemBlue light mode
@@ -1682,7 +1682,7 @@ ios-dark-mode-red-alternative:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: "#FFF"  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#0984ff"  # from Apple systemBlue dark mode
@@ -1757,7 +1757,7 @@ ios-dark-mode-red:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: rgba(255, 214, 10, 1)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: "#0984ff"  # from Apple systemBlue dark mode
